--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@entypo-icons/core": "^1.0.1",
+    "@entypo-icons/react": "^1.0.4",
+    "@entypo-icons/utils": "^1.0.3",
     "@expo/vector-icons": "~10.0.0",
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/bottom-tabs": "^5.0.0",
@@ -29,6 +32,7 @@
     "react-native-gesture-handler": "~1.5.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
